update the some colume

--- a/AWS/S3/index2.html
+++ b/AWS/S3/index2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S3 Bucket Index</title>
+    <title>S3</title>
 </head>
 <body>
-    <h1>S3 Bucket Index</h1>
+    <h4>kenny.januio.io s3 bucket files</h4>
     <ul id="objectList"></ul>
     <script>
         // Fetch and display objects in the bucket
